# sync_services

./: .gitignore  AUTHENTICATION.md  README.md  docker-compose.dev.yml  docker-compose.yml  setup.ps1
backend/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml  requirements.txt
backend/files/: flow(3).json
backend/models/: config.py  file_metadata.py
backend/services/: file_manager.py  git_service.py  sync_service.py
backend/utils/: path_utils.py
files/: .gitkeep
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CodeViewer.tsx  FileTree.tsx  FileUpload.tsx  GitStatusPanel.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
