[project]
name = "backend"
version = "0.1.0"
description = "GitHub Sync System Backend - FastAPI backend for syncing files across PCs via GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "gitpython>=3.1.40",
    "python-magic>=0.4.27",
    "aiofiles>=23.2.1",
]
